--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ hr {
 }
 
 .fsize {
-  height: 20px;
+  height: 5px;
 }
 
 .maths{
@@ -17,7 +17,7 @@ hr {
 }
 
 .russian{
-  color: blue;
+  color: green;
 }
 
 .chemistry{
